--- a/angular_04_echarts/src/app/page/dashboard/dashboard.component.html
+++ b/angular_04_echarts/src/app/page/dashboard/dashboard.component.html
@@ -8,15 +8,15 @@
             </div>
             <div
                 class="chart-xs w-100 position-relative dashboard-sm shadow rounded rounded-lg border-pink">
-                <app-select-chart [cardID]="card02" [cardClass]="'chart-xs'"></app-select-chart>
+                <app-select-chart [cardID]="card02" [cardClass]="'chart-xs'" [chartValues]="dashboard02Data"></app-select-chart>
             </div>
             <div
                 class="chart-xs w-100 position-relative dashboard-sm shadow rounded rounded-lg border-pink">
-                <app-select-chart [cardID]="card03" [cardClass]="'chart-xs'"></app-select-chart>
+                <app-select-chart [cardID]="card03" [cardClass]="'chart-xs'" [chartValues]="dashboard03Data"></app-select-chart>
             </div>
         </aside>
         <div class="position-relative dasboard-04 shadow chart-sm rounded rounded-lg border-pink">
-            <app-select-chart [cardID]="card04" [cardClass]="'chart-sm'"></app-select-chart>
+            <app-select-chart [cardID]="card04" [cardClass]="'chart-sm'" [chartValues]="dashboard04Data"></app-select-chart>
         </div>
     </div>
     <div class="mt-2 w-100 h-100 grid grid-template gap-2">
